# survivor-fantasy

./: .gitattributes  .gitignore  Makefile  README.md  WEEKLY.md  bootstrap_s50.py  check_db.py  check_elim.py  check_exit.py  check_jenna.py  check_names.py  config.yaml  debug_contestants.html  deploy.ps1  pyproject.toml  setup_project.ps1  status.py
docs/: buffs.html  fjv.html
docs/frontend/: buffs.html  fjv.html
frontend/: buffs.html  fjv.html
notebooks/: 01_survivoR_exploration.Rmd  05_nlp_experiments.ipynb
notes/: handoff.md  on_strategy_and_bias.md  project_plan.md
scripts/: batch_starters.py  compare_scoring.py  download_portraits.py  export_survivoR.R  fix_events.py  fix_rosters.py  fix_starters.py  parse_episodes.py  scrape_episodes.py  scrape_rosters.py  update_starters.py
src/survivor_fantasy/: __init__.py
src/survivor_fantasy/db/: connect.py  metadata.py  schema.py
src/survivor_fantasy/pipeline/: features.py  ingest.py  ingest_s50.py  publish.py  scorer.py
